--- a/poli.css
+++ b/poli.css
@@ -1,377 +1,70 @@
-article{
-  font-size:10em;
-  font-family:'lobster', cursive;
-  font-weight:24;
-  color:white;
-  text-align:center; 
-  text-shadow: 1px 1px 3px #fff;
-  font-size:16px;
-   
-
-}
-
-body{
-    background-image: url(logo.png);
-  background-size: cover; 
-}
-
-
-table{
-  text-shadow: 2px 2px 19px #fff;
-  box-shadow:30px 20px 10px 10px #000, 30px 20px 10px 10px #000; 
-  font-size:16px;
-  font-family:'lobster', cursive;
-  font-weight:50; 
-  color:black;
-  height:90px;
-  width:800px;  
-  background-color:; 
-  padding:20px;
-  box-sizing: content-box;  
-  border-radius:2em;
-  border: 10px  groove grey    
-}
-
-nb{
-    padding:100px; 
-  font-size:16px;
-  font-family:'lobster', cursive;
-  font-weight:50; 
-  color:blue;
-  background-color:grey; 
-  padding:100px;
-  box-sizing: content-box; 
-  }
-
-  nc{
-  font-size:16px;
-  font-family:'lobster', cursive;
-  font-weight:50; 
-  color:blue;
-  background-color:grey; 
-  padding:100px;
-  box-sizing: content-box; 
-  }
-
-fa{
-  font-size:16px;
-  font-family:'lobster', cursive;
-  font-weight:50;
-  padding:100px; 
-  color:blue;
-  background-color:grey; 
-  padding:100px;
-  box-sizing: content-box; 
-  }
-
-fa{
-  font-size:16px;
-  font-family:'lobster', cursive;
-  font-weight:50; 
-  color:blue;
-  background-color:grey; 
-  padding:100px;
-  box-sizing: content-box; 
-}
-
-  oc{
-  font-size:16px;
-  font-family:'lobster', cursive;
-  font-weight:50; 
-  color:blue;
-  background-color:grey; 
-  padding:100px;
-  box-sizing: content-box; 
-}
-
-  nc{
-  font-size:16px;
-  font-family:'lobster', cursive;
-  font-weight:50; 
-  color:blue;
-  background-color:grey; 
-  padding:100px;
-  box-sizing: content-box; 
-}
-
-
-footer{
- background-color:balck;
- color:#cccccc;
- text-align:center;
- padding:10px;
- position: fixed;
- bottom: 0;
- width:100%;  
-}
-
-
-aside{
-    backdrop-filter: blur(10px); 
-    padding: 20px;
-    width: 250px;
-    position:fixed;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    overflow-y: auto;
-}
-
-ul{
-    list-style-type: none;
+/* Estilo básico */
+body {
+    margin: 0;
     padding: 0;
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
 }
 
-li{
-    margin-bottom:10px;
-}
-.oculto{
-    display: none;
-}
-
-
-.emil{
-  margin:10px
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #333;
+    padding: 1em;
 }
 
-button{
-
-  border:none;     
-
-}
-
-.menu {
-    width:5px
-    color:;
-    background-color:;
-    padding: 10px;
-    box-shadow:2px 5px 15px #000 
-}
-
-.btn {
-    cursor: pointer;
-    display: block;
-    position: relative;
-    padding: 10px;
-}
-
-.btn span {
-    background-color: ;
-    display: block;
-    height: 2px;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    transition: all 0.3s ease;
-    width: 24px;
-}
-
-.btn span:before,
-.btn span:after {
-    background-color: ;
-    content: '';
-    display: block;
-    height: 100%;
-    position: absolute;
-    transition: all 0.3s ease;
+.nav-links {
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
     width: 100%;
 }
 
-.btn span:before {
-    top: -8px;
+.nav-links li {
+    margin: 0 1em;
 }
 
-.btn span:after {
-    bottom: -8px;
-}
-
-#toggle:checked + .btn span {
-    background-color: transparent;
-}
-
-#toggle:checked + .btn span:before {
-    transform: rotate(45deg);
-    top: 0;
-}
-
-#toggle:checked + .btn span:after {
-    transform: rotate(-45deg);
-    bottom: 0;
-}
-
-.lista {
-    display: none;
-    list-style: none;
-    padding: 0;
-}
-
-#toggle:checked ~ .lista {
-    display: block;
-}
-
-.lista li {
-    padding: 10px;
-}
-
-.lista li a {
-    color: #fff;
+.nav-links a {
     text-decoration: none;
+    color: white;
+    font-weight: bold;
 }
 
-.submenu {
-    display: none;
-    list-style: none;
-    padding: 0;
+.logo img {
+    max-width: 100px;
 }
 
-.submenu-toggle:checked + label + .submenu {
-    display: block;
+article {
+    text-align: center;
+    margin: 2em 0;
 }
-
-.submenu li {
-    padding: 5px 10px;
-    background-color: #555;
-}
-
-.submenu li a {
-    color: #fff;
-    text-decoration: none;
-    display: block;
-}
-
-@media (max-width: 767px){
-  *{
-    display:none;
-
-  }
-  *{
-    display:none;
-  }
-}
-
-#mua{
-  height:350px;
-  width:250px;
-  border:10px groove ;
-}
-
-
 
 .gallery {
-
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin: 20px 0;
 }
 
 .photo {
     margin: 10px;
-    border: 10px groove black;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-    /* Establecer un tamaño predeterminado para las fotos */
-    width: 300px;
-    height: 250px;
-    overflow: hidden; /* Para recortar las imágenes si son más grandes que el tamaño especificado */
 }
 
 .photo img {
-    /* Asegurar que la imagen llene completamente el contenedor */
-    width: 100%;
-    height: 100%;
-    object-fit: cover; /* Para mantener la proporción de la imagen y recortarla si es necesario */
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px;
 }
 
-
-.photo {
-    position: relative;
-    transition: transform 0.2s ease-in-out;
-}
-
-.photo:hover {
-    transform: scale(1.05);
-}
-
-.photo img {
-    transition: opacity 0.2s ease-in-out;
-}
-
-.photo:hover img {
-    opacity: 0.8;
-}
-
-@media only screen and (max-width: 1280px) {
-    .menu {
-        width: 100%;
-    }
-    .lista {
-        display: none;
-        flex-direction: column;
-        background-color: ;
-        position: absolute;
-        top: 80px;
-        left: 0;
-        width: 100%;
-        z-index: 1;
-    }
-    .lista li {
-        border-bottom: 1px solid ;
-    }
-    .btn {
-        display: block;
-    }
-    .submenu-toggle {
-        display: none;
-    }
-    #toggle:checked + .lista {
-        display: block;
-    }
-    #toggle:checked + .btn span:before {
-        transform: translateY(5px) rotate(135deg);
-    }
-    
-    article {
-        padding: 10px;
-    }
-}
-nav {
-  background-color: #333;
-  color: #fff;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-}
-
-.logo img {
-  width: 100px; /* Ajusta el tamaño de la imagen según sea necesario */
-}
-
-.nav-links {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-.nav-links li {
-  display: inline;
-  margin-right: 20px;
-}
-
-.nav-links li a {
-  color: #fff;
-  text-decoration: none;
-}
- 
- .reglas{
-    background-color:black;
-    border: solid 5px  grey;
-
-
- }
-
+/* Responsividad */
 @media (max-width: 768px) {
-  /* Ajustes de estilo para pantallas pequeñas */
+    .nav-links {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .gallery {
+        flex-direction: column;
+    }
 }
-
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
