--- a/poli.css
+++ b/poli.css
@@ -19,6 +19,8 @@ nav {
     display: flex;
     justify-content: space-around;
     width: 100%;
+    padding: 0;
+    margin: 0;
 }
 
 .nav-links li {
@@ -33,6 +35,7 @@ nav {
 
 .logo img {
     max-width: 100px;
+    height: auto;
 }
 
 article {
@@ -57,8 +60,12 @@ article {
     border-radius: 10px;
 }
 
-/* Responsividad */
+/* Responsividad para pantallas pequeñas */
 @media (max-width: 768px) {
+    nav {
+        flex-direction: column;
+    }
+
     .nav-links {
         flex-direction: column;
         align-items: center;
@@ -66,5 +73,9 @@ article {
 
     .gallery {
         flex-direction: column;
+    }
+    
+    .photo {
+        width: 90%; /* Ajustar tamaño de las fotos para móviles */
     }
 }
